@@ -75,8 +75,8 @@ sub module {
 	}
 
 	# Find the list of changes
-	my $from    = $dist->latest->info->revision;
 	my $to      = $dist->info->revision;
+	my $from    = $dist->latest->info->revision;
 	my @entries = $dist->svn_log( '-r', "$from:$to", { cache => 1 } );
 
 	# Show the information
@@ -90,8 +90,8 @@ sub module {
 			[ 'Trunk   Version', $changes->current->version ]
 		: () ),
 		[ 'Trunk   Revision', $dist->info->revision ],
-		[ 'Trunk   Author',   $dist->info->author ],
-		[ 'Trunk   Date',     $dist->info->date ],
+		[ 'Trunk   Author',   $dist->info->author   ],
+		[ 'Trunk   Date',     $dist->info->date     ],
 		( map {
 			my $revision = $_->revision;
 			my $message  = $_->author . ' - ' . $_->message;
@@ -100,7 +100,7 @@ sub module {
 			[ "Commit  $revision" => $message ]
 		} @entries ),
 		( $release ? (
-			[ 'Release Version',  $release->version      ],
+			[ 'Release Version',  $release->version        ],
 			[ 'Release Revision', $release->info->revision ],
 			[ 'Release Author',   $release->info->author   ],
 			[ 'Release Date',     $release->info->date     ],
@@ -168,8 +168,9 @@ sub report_changed_versions {
 		}
 
 		# How many log entries are there from the last release
+		my $info     = $dist->info;
+		my $to       = $info->revision;
 		my $from     = $dist->latest->info->revision;
-		my $to       = $dist->info->revision;
 		my @entries  = $dist->svn_log( '-r', "$from:$to", { cache => 1 } );
 
 		# Skip if there are no external commits
@@ -186,7 +187,7 @@ sub report_changed_versions {
 			$release,
 			scalar(@entries),
 			scalar(@external),
-			$dist->info->author,
+			$info->author,
 		];
 	}
 
